Closed
Bug 1325945
Opened 9 years ago
Closed 9 years ago
Fix crash in WebRenderImageLayer::GetAsSourceSurface, re-enable skipped reftests
Categories
(Core :: Graphics: WebRender, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla54
| Tracking | Status | |
|---|---|---|
| firefox53 | --- | affected |
People
(Reporter: kats, Unassigned)
References
Details
(Whiteboard: [gfx-noted])
I fixed a memory leak that was preventing WebRender*Layer objects from getting cleaned up, in bug 1325678. However that exposed crashes in two reftests:
layout/reftests/css-animations/background-position-running.html
layout/reftests/css-animations/background-position-important.html
so I marked those tests skip-if(webrender). The crashes can be see in the try push at [1]. In particular, the crash stack seems to show that when WebRenderImageLayer::GetAsSourceSurface() is called, |mContainer| is null, and so the AutoLockImage RAII object creation results in a null pointer deref. I don't know if bug 1325349 will fix this but it seems related.
This bug is specifically for making sure the two tests don't crash and can be re-enabled.
[1] https://treeherder.mozilla.org/#/jobs?repo=try&revision=1636a5dbbe8a443ba07d7edd9cf2022978cc7597
| Reporter | ||
Updated•9 years ago
|
Summary: Fix crash in WebRenderImageLayer::GetAsSourceSurface → Fix crash in WebRenderImageLayer::GetAsSourceSurface, re-enable skipped reftests
| Reporter | ||
Comment 1•9 years ago
|
||
A null guard seems to do the job: https://treeherder.mozilla.org/#/jobs?repo=try&revision=0508706eb3c1d220a7e10c885f58f45222239798
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/projects/graphics/rev/6c3ac2b72d2b
Guard against possible null pointer dereference. r=sotaro?
https://hg.mozilla.org/projects/graphics/rev/96716340bdf3
Re-enable a couple of tests that were skipped for crashes. r=sotaro?
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
| Reporter | ||
Updated•9 years ago
|
Target Milestone: --- → mozilla54
You need to log in
before you can comment on or make changes to this bug.
Description
•