Bug 1325945 - Guard against possible null pointer dereference. r=sotaro?

MozReview-Commit-ID: V7xizXL2wb